--- a/README
+++ b/README
@@ -1,7 +1,12 @@
 An OpenCL raytracer.
 
+Usage:
+	python clray.py [scene-filename-without-.py]
+
 Requirements:
+	Python (v. 2.7 ?)
 	pyopencl
 	pygame (for visualization)
 	nympy
 	scipy
+	sympy (for implicit surfaces)
